--- a/app/views/apps/index.html.erb
+++ b/app/views/apps/index.html.erb
@@ -1,1 +1,19 @@
 <%= link_to "New App", new_app_path %>
+
+<table id="all-apps" class="table table-striped table-hover">
+  <theader>
+    <th>ID</th>
+    <th>Name</th>
+    <th>Bundle ID</th>
+    <th>Sandbox</th>
+  </theader>
+  
+  <% @apps.each do |app| %>
+    <tr>
+      <td><%= app.id %></td>
+      <td><%= app.name %></td>
+      <td><%= app.bundle_id %></td>
+      <td><%= render('sandbox_form', locals = { :app => app }) if signed_in? %></td>
+    </tr>
+  <% end %>
+</table>
