--- a/app/views/apps/_remove_from_sandbox.html.erb
+++ b/app/views/apps/_remove_from_sandbox.html.erb
@@ -1,4 +1,3 @@
-<%= form_for(current_user.sandboxes.find_by_app_id(app),
-             html: { method: :delete }) do |f| %>
+<%= form_for(current_user.sandboxes.find_by_app_id(app), html: { method: :delete }) do |f| %>
   <%= f.submit "Remove from sandbox", class: "btn btn-small btn-danger" %>
 <% end %>
