--- a/app/views/apps/index.html.erb
+++ b/app/views/apps/index.html.erb
@@ -1,11 +1,12 @@
-<%= link_to "New App", new_app_path %>
-
+<h1>All available applications <small>(<%= @apps.count %>)</small></h1><br/>
 <table id="all-apps" class="table table-striped table-hover">
   <theader>
     <th>ID</th>
     <th>Name</th>
     <th>Bundle ID</th>
-    <th>Sandbox</th>
+    <% if signed_in? %>
+      <th>Sandbox</th>
+    <% end %>
   </theader>
   
   <% @apps.each do |app| %>
@@ -13,7 +14,9 @@
       <td><%= app.id %></td>
       <td><%= app.name %></td>
       <td><%= app.bundle_id %></td>
-      <td><%= render('sandbox_form', locals = { :app => app }) if signed_in? %></td>
+      <% if signed_in? %>
+        <td><%= render('sandbox_form', locals = { :app => app }) if signed_in? %></td>
+      <% end %>
     </tr>
   <% end %>
 </table>
