--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,7 +63,7 @@
               </li>
             </ul>
               <% if user_signed_in? %>
-                <%= link_to('Sign out', destroy_user_session_path, :method => :delete) %>
+                <%= link_to("Sign out - #{current_user.email}", destroy_user_session_path, :method => :delete) %>
               <% else %>
                 <%= form_for(resource, :as => resource_name, :url => session_path(resource_name), :html => {:class => "navbar-form pull-right"}) do |f| %>
                   <%= f.email_field :email, placeholder: "Email", class:"span2" %>
@@ -71,28 +71,20 @@
                   <%= f.submit "Sign in", class: "btn" %>
                 <% end %>
               <% end %>
-            
           </div><!--/.nav-collapse -->
         </div>
       </div>
     </div>
 
-    <div class="container">
-      <p>
-        <% if user_signed_in? %>
-            Signed in as <%= current_user.email %>
-          <% else %>
-            <%= link_to "Sign up", new_user_registration_path %>
-        <% end %>
-      </p>
-      
+    <div class="container">      
       <p>
         <% flash.each do |key, value| %>
-          <div class='flash' id='<%= key %>'>
+          <div class='alert alert-<%= key %>' id='<%= key %>'>
             <%= value %>
           </div>
         <% end %>
       </p>
+      <p><%= link_to "Sign up", new_user_registration_path unless user_signed_in? %></p>
 
       <p><%= yield %></p>
 
